# nlp_pipeline

./: .gitignore  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  adaptive_quiz_summary.md  all_models_comparision.html  app.js  best_model.md  best_models.md  budget_size_est.md  custom_model_summary.md  embedablity.md  grouped_irt_summary.md  index.html  pyproject.toml  styles.css  time_est.md
data/: best_grouped_irt_model_model_data.json  rasch_model_data.json  rasch_twopl_vote_user_model_data.json
data/example_texts/: The hitchhikers guide to the galaxy - Douglas Adams.txt
data/raw/: MANUAL_DOWNLOAD_INSTRUCTIONS.txt
data/user_profiles/: fimmind.json
docs/: data_preparation.md
reports/: results_cold_word.csv  results_static.csv
reports/ad_hoc_budget_accuracy/: neural_n2c_rate35_svd_hybrid_w30_70.csv
reports/adaptive_quiz/: uncertainty_vs_light_random_ba_delta.csv  uncertainty_vs_light_random_raw.csv  (+1 more)
scripts/: eval_baseline_split.py  eval_neural_memory_split.py  export_site_models.py  prepare_data.py  run_benchmark.py  run_calibrated_prior_benchmark.py  run_collaborative_benchmark.py  run_grouped_residual_irt_experiments.py  run_model_improvement_benchmark.py  run_neural_memory_mirt_benchmark.py  run_neural_memory_mirt_quick.py  run_svd_ridge_benchmark.py  run_targeted_neural_improvement.py  vocab_book_cli.py  vocab_book_cli.sh
site/: app.js  index.html
tests/: test_estimators_policies_metrics.py  test_neural_benchmark_protocol.py  test_prepare_data_pipeline.py  test_reproducibility_and_uncertainty.py  test_synthetic_and_loading.py
(+359 files in other folders)
