[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vocab-benchmark"
version = "0.1.0"
description = "Benchmark for online vocabulary knowledge estimation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "torch>=2.11",
  "fasttext>=0.9.3",
  "openpyxl>=3.1",
  "wordfreq>=3.1",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
